syntax = "proto3";
package shsched;

service Shsched {
        rpc GetInfo(Empty) returns (NodeInfo) {};
        rpc SchedTask(RecipeMsg) returns (Empty) {};
        rpc Exec(stream Chunk) returns (ExecResponse) {};
        rpc Ret(ExecOutput) returns (Empty) {};
}

// Generic
message Empty {}

// rpc GetInfo(Empty) returns (NodeInfo) {};
message NodeInfo {
        int64 CPU = 1;
}

// rpc SchedTask(RecipeMsg) returns (Empty) {};
message RecipeMsg {
        string RecipeFilePath = 1;
        string Port = 2;
}

// rpc Exec(Chunk) returns (ExecResponse) {};
message Chunk {
        bytes Content = 1;
}

message ExecResponse {
        string Message = 1;
}

// rpc Ret(ExecOutput) returns (Empty) {};
message ExecOutput {
        string Output = 1;
}
